// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders a Switch component with loading dots, loading className and without the reverse className 1`] = `
<Checkbox
  className="carbon-switch  carbon-switch__loading"
  disabled={true}
  label="My label"
  readOnly={true}
  reverse={false}
>
  <div
    className="switch switch__loading"
  >
    <span
      className="carbon-switch__slider"
    />
    <div
      className="carbon-switch__on"
    >
      <div
        className="carbon-loading-dots"
      >
        <div
          className="carbon-loading-dots"
        />
        <div
          className="bounce bounce2"
        />
        <div
          className="bounce bounce3"
        />
      </div>
    </div>
    <div
      className="carbon-switch__off"
    >
      <div
        className="carbon-loading-dots"
      >
        <div
          className="carbon-loading-dots"
        />
        <div
          className="bounce bounce2"
        />
        <div
          className="bounce bounce3"
        />
      </div>
    </div>
  </div>
</Checkbox>
`;

exports[`Switch renders a Switch component with reverse className 1`] = `
<Checkbox
  className="carbon-switch  carbon-switch__reverse"
  label="My label"
  reverse={true}
>
  <div
    className="switch"
  >
    <span
      className="carbon-switch__slider"
    />
    <div
      className="carbon-switch__on"
    >
      <Icon
        bgSize="small"
        type="tick"
      />
    </div>
    <div
      className="carbon-switch__off"
    >
      <Icon
        bgSize="small"
        type="cross"
      />
    </div>
  </div>
</Checkbox>
`;
